--- a/http-proxy/server/Dockerfile
+++ b/http-proxy/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM amazonlinux
 
 # Install python for running the server and net-tools for modifying network config
-RUN yum install python3 net-tools -y
+RUN yum install python3 pip net-tools -y
 
 WORKDIR /app
 
